--- a/.jshintrc
+++ b/.jshintrc
@@ -2,12 +2,7 @@
   "predef": [
     "document",
     "window",
-    "-Promise",
-    "$",
-    "computed",
-    "injectService",
-    "_",
-    "d3"
+    "-Promise"
   ],
   "browser": true,
   "boss": true,
@@ -32,6 +27,6 @@
   "strict": false,
   "white": false,
   "eqnull": true,
-  "esversion": 6,
+  "esnext": true,
   "unused": true
 }
