--- a/.jshintrc
+++ b/.jshintrc
@@ -2,7 +2,12 @@
   "predef": [
     "document",
     "window",
-    "-Promise"
+    "-Promise",
+    "$",
+    "computed",
+    "injectService",
+    "_",
+    "d3"
   ],
   "browser": true,
   "boss": true,
@@ -27,6 +32,6 @@
   "strict": false,
   "white": false,
   "eqnull": true,
-  "esnext": true,
+  "esversion": 6,
   "unused": true
 }
