·         ‘Firm name’, ‘Email address’, ‘Firm specialization’ should be sentence case.
·         Employee field accepting only 5-digits. The range for this field is 1- 100,000.

·         Net Revenue field not accepting negative values. The range is -999,999,999 to 999,999,999.

·         Profitability range is -100 to 100.

·         Repeat clients range is  0 to 100.

·         Show comma ‘,’ based on value entered in Net revenue. For example if user enters 300000000, add comma and show as 300,000,000 and -40000 show as -40,000

·         Enter all values except ‘Firm specialization’. Only National Avg and You graph is displayed. Firm your size should also be displayed. http://screencast.com/t/DwuVbKCZk. The graph should be displayed based on the values entered in the entry screen.

·         Enter all values, view the results, click the back button and delete employees, net revenue.  Error messages displayed for employees and net revenue fields saying they are required. User should see the graph based on the input provided. http://screencast.com/t/6BsPPDIJI (graph is displayed based on the values entered. There is no required field validation).

·         Change the color of the inline error message to ‘white’ . ‘Red’ is very hard to read in grey background.

·         The ‘You’ graph should be displayed in the left most side.

·         The Net Revenue per employee is showing Net Revenue alone. It should be taking “net revenue” and “employee count” from the data entry screen and dividing “employee count” into “net revenue”.

·         Units like $,% not displayed in graph when you hover on the graph.

·         Change the National Avg  to cid:image001.png@01D25164.4CDD80D0

·         Leave Firms your size and Firm specialization to

·         Change the hover color from blue to cid:image002.png@01D25164.4CDD80D0

--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "ember-welcome-page": "^1.0.3",
     "emberx-select": "2.2.1",
     "loader.js": "^4.0.10",
-    "ember-cli-simple-validation": "^1.4.1"
+    "ember-cli-simple-validation": "^1.4.1",
+    "ember-cli-format-number": "2.0.0"
   },
   "ember-addon": {
     "paths": [
